# src/routes/order.routes.ts
@@ -1,0 +1,10 @@
+import { Router } from 'express';
+import * as orderController from '../controllers/order.controller';
+
+const router = Router();
+
+router.post('/', orderController.createOrder);
+router.get('/', orderController.getAllOrders);
+router.get('/:id', orderController.getOrderById);
+
+export default router;
